Сделал корректное присвоение task_id у вложенных сущностей TaskEntity